--- a/misc/searchResults.plist
+++ b/misc/searchResults.plist
@@ -5,12 +5,10 @@
 	<key>Edmonton</key>
 	<array/>
 	<key>Ottawa</key>
-	<array/>
-	<key>Item 2</key>
-	<string>Bayshore</string>
-	<key>Item 1</key>
-	<string>Rideau</string>
-	<key>Item 0</key>
-	<string>Queensview</string>
+	<array>
+		<string>Bayshore</string>
+		<string>Rideau</string>
+		<string>Queensview</string>
+	</array>
 </dict>
 </plist>
