displaying club results per city. adding club details view.

--- a/misc/provinceCitiesDictionary.plist
+++ b/misc/provinceCitiesDictionary.plist
@@ -17,6 +17,7 @@
 	<array>
 		<string>Ajax</string>
 		<string>Aurora</string>
+		<string>Toronto</string>
 		<string>Belleville</string>
 		<string>Ottawa</string>
 	</array>
